# job-rag

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: bootstrap-corpus.yml  ci.yml  deploy-api.yml  deploy-infra.yml  deploy-spa.yml  static-tf.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  write_summary.py
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ci-workflow-fails-0s.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_baseline.py  0002_add_user_profile.py  0003_add_career_id.py  0004_corpus_cleanup.py  0005_adopt_entra_oid.py
data/: profile.json  skill-gaps.json
data/eval/: extraction_ground_truth.json  extraction_results.json  golden_queries.json  results.json
docs/: how-it-works.md  project-job-rag.md
frontend/: .env.local.example  .env.production  .gitignore  README.md  eslint.config.js  index.html  openapi.snapshot.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
infra/: .tflint.hcl  README.md
scripts/: docker-entrypoint.sh  evaluate.py  refresh-external-outputs.sh  refresh-swa-origin.sh  tf-apply-prod.sh
tests/: conftest.py  test_agent.py  test_alembic.py  test_analytics.py  test_api.py  test_auth.py  test_cli.py  test_entra_jwt.py  test_extraction.py  test_extraction_accuracy.py  test_ingestion.py  test_lifespan.py  test_matching.py  test_mcp_server.py  test_models.py  test_observability.py  test_reextract.py  test_retrieval.py  test_security.py  test_sse_contract.py
(+452 files in other folders)
