[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-rag"
version = "0.1.0"
description = "RAG system for AI Engineer job postings — skill extraction, matching, and gap analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor",
    "openai",
    "pydantic",
    "pydantic-settings",
    "psycopg2-binary",
    "pgvector",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "python-dotenv",
    "typer",
    "structlog",
    "tenacity",
    "fastapi",
    "uvicorn[standard]",
    "langchain-core",
    "langchain-openai",
    "sentence-transformers",
    "python-multipart",
]

[project.scripts]
job-rag = "job_rag.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "pyright", "ragas>=0.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["eval: extraction accuracy tests (require eval data, excluded from CI)"]
